links de estudo

--- a/Linear_Regression_Model_in_PyTorch/Training_a_Linear_Regression_Model_in_PyTorch.ipynb
+++ b/Linear_Regression_Model_in_PyTorch/Training_a_Linear_Regression_Model_in_PyTorch.ipynb
@@ -20,7 +20,14 @@
    "source": [
     "Link de estudo:\n",
     "\n",
-    "* [Machine Learning Mastery: PhD.:Jason Brownlee](https://machinelearningmastery.com/training-a-linear-regression-model-in-pytorch/)"
+    "* [Pytorch](https://github.com/pytorch/pytorch)\n",
+    "\n",
+    "* [Pytorch Tutoriais](https://pytorch.org/tutorials/)\n",
+    "\n",
+    "* [Machine Learning Mastery: PhD.:Jason Brownlee](https://machinelearningmastery.com/training-a-linear-regression-model-in-pytorch/)\n",
+    "\n",
+    "\n",
+    "* [Machine Learning Mastery - Pytorch: PhD.:Jason Brownlee](https://machinelearningmastery.com/pytorch-tutorial-develop-deep-learning-models/)\n"
    ]
   },
   {
